--- a/src/index.css
+++ b/src/index.css
@@ -6,24 +6,19 @@ body {
   height: 100%;
 
   user-select: none;
+}
 
+:root {
   --primary: #ff6e30;
-  --secondary: #fff;
-  --background: #373a42;
   --font-size: 64px;
   --line-height: 80px;
   --font-family: "Poppins", sans-serif;
   --font-bold: 600;
   --space: 24px;
 }
-a {
-  color: inherit;
-  text-decoration: inherit;
-  display: block;
-}
 
 @media only screen and (max-width: 680px) {
-  body {
+  :root {
     --font-size: calc(64px - 16px);
     --line-height: calc(80px - 16px);
     --space: calc(24px - 8px);
@@ -31,7 +26,7 @@ a {
 }
 
 @media only screen and (max-width: 510px) {
-  body {
+  :root {
     --font-size: calc(64px - 16px * 2);
     --line-height: calc(80px - 16px * 2);
     --space: calc(24px - 8px * 2);
@@ -39,48 +34,11 @@ a {
 }
 
 @media only screen and (max-width: 340px) {
-  body {
+  :root {
     --font-size: calc(64px - 16px * 3);
     --line-height: calc(80px - 16px * 3.5);
     --space: calc(24px - 8px * 2.5);
   }
-}
-
-#particles {
-  background: var(--background);
-}
-
-.info-container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-
-  padding: 2%;
-
-  pointer-events: none;
-
-  display: flex;
-}
-
-.info {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
-  margin: auto 50% auto auto;
-}
-
-.cv {
-  font-family: var(--font-family);
-  font-size: var(--font-size);
-  font-weight: var(--font-bold);
-}
-
-.cv {
-  margin: calc(var(--space) * 5) 0;
-  cursor: pointer;
 }
 
 .hoverable {
@@ -117,14 +75,4 @@ a {
 .hoverable.inverted:hover {
   background-size: 2px 50%;
   color: var(--secondary);
-}
-
-.icons {
-  font-size: calc(var(--font-size) * 0.8);
-  display: flex;
-}
-
-.icon {
-  cursor: pointer;
-  padding: calc(var(--space) * 0.7);
 }
