--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,12 +1,5 @@
-html,
-body {
-  margin: 0;
-
-  width: 100%;
-  height: 100%;
-
-  user-select: none;
-}
+@value light: #fff;
+@value dark: #373a42;
 
 :root {
   --primary: #ff6e30;
@@ -15,6 +8,27 @@ body {
   --font-family: "Poppins", sans-serif;
   --font-bold: 600;
   --space: 24px;
+}
+
+:global(.theme-light) {
+  --secondary: dark;
+  --background: light;
+}
+:global(.theme-dark) {
+  --secondary: light;
+  --background: dark;
+}
+
+html,
+body {
+  margin: 0;
+
+  width: 100%;
+  height: 100%;
+
+  user-select: none;
+
+  background: var(--background);
 }
 
 @media only screen and (max-width: 680px) {
@@ -41,7 +55,7 @@ body {
   }
 }
 
-.hoverable {
+:global(.hoverable) {
   pointer-events: auto;
   color: var(--secondary);
 
@@ -56,12 +70,12 @@ body {
 
   transition: background-size 0.2s, color 0.2s;
 }
-.hoverable:hover {
+:global(.hoverable:hover) {
   background-size: 100% 50%;
   color: var(--primary);
 }
 
-.hoverable.inverted {
+:global(.hoverable.inverted) {
   color: var(--primary);
 
   background: linear-gradient(
@@ -73,7 +87,7 @@ body {
   background-repeat: repeat-x;
   background-size: 2px 0px;
 }
-.hoverable.inverted:hover {
+:global(.hoverable.inverted:hover) {
   background-size: 2px 50%;
   color: var(--secondary);
 }
