--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,14 @@ body {
   --space: 24px;
 }
 
+#rick {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
 @media only screen and (max-width: 680px) {
   :root {
     --font-size: calc(64px - 16px);
